Tue Jul 22 12:56:18 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds.html: other small updates

Mon Jul 21 17:33:09 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* doc/tds.html fixed up the introduction

Mon Jul 21 11:54:40 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds.html src/tds/query.c:
	- updated and fixed some RPC issues

Mon Jul 21 10:49:58 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO: add a TODO from ML
	* src/tds/query.c: comments

Sat Jul 19 21:37:28 EDT 2003
	* src/tds/login.c src/tds/read.c src/tds/write.c
	- include sys/select.h, patch from Pablo Gutierrez

Sat Jul 19 19:37:22 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* configure.in test for _vbprintf and _bprintf (for QNX)
	
Sat Jul 19 16:07:25 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* configure.in test for sys/select.h (for QNX)
	
Wed Jul 16 10:23:47 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* configure.in link readline before ncurses

Tue Jul 15 14:43:06 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/login.c fix assert side effect in TDS7 login.  

Tue Jul 15 10:03:50 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/login.c src/tds/read.c:
	- fix some issue on win32

Sun Jul 13 18:05:44 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c src/tds/token.c:
	- save product name from wire

Sat Jul 12 17:31:07 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merging Steve Murphree patch (#757369)
	- fix memory corruption after merge

Fri Jul 11 17:07:50 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- start merging Steve Murphree patch (#757369)
	* src/tds/read.c: fix compile problem

Fri Jul  4 19:03:10 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/replacements/iconv.c verified working, passes unit tests
	* include/tds.h include/tdsiconv.h
	* src/server/login.c src/tds/iconv.c src/tds/login.c